# BitDogLab

./: .gitignore  README.md
1 - Multicore/: Anexo_A1_Superloop_LED_Botao.docx  Anexo_A2_Interrupcao_Botao_Imediata.docx  Anexo_A3-2_fila_circular_produtor_consumidor.docx  Anexo_A4-2_Spinlock_RP2040.docx  Anexo_A4_led_dinamico_btn.docx  Anexo_A6_multicore_fifo_troca.docx
1 - Multicore/Exemplos/: Anexo_A3-1_variavel_global_entre_ISR_loop.docx  Anexo_A3_Temporizador_Visivel.docx  Anexo_A5_multicore_led_mensagem.docx
10 - MQTT/Exemplos/: mosquitto.conf
11 - Sensores/Exemplos/bitdoglab_dht11/: CMakeLists.txt  dht11.c  dht11.h  main.c
13 - Multithread/Exemplos/: Exemplo Prático 1 de Aplicação - SMP.c  Exemplo Prático 1.c  Exemplo Prático 2 de Aplicação - SMP.c  Exemplo Prático 2.c  Exemplo Prático 3.c  Exemplo Prático 4.c  Exemplo Prático 5.c  Exemplo Prático 6.c  Exemplo Prático 7.c
2 - Interruptions/isr_adc_leitura/: CMakeLists.txt  isr_adc_leitura.bak
2 - Interruptions/isr_analog/: CMakeLists.txt  isr_analog.c  isr_analog.docx
2 - Interruptions/isr_botoes/: CMakeLists.txt  isr_botoes.docx
2 - Interruptions/isr_dma/: CMakeLists.txt  dma_isr.c  isr_dma.docx
2 - Interruptions/isr_pwm/: CMakeLists.txt  isr_pwm.c  isr_pwm.docx
2 - Interruptions/isr_timer/: CMakeLists.txt
2 - Interruptions/isr_uart/: CMakeLists.txt
2 - Interruptions/isr_wdt1/: CMakeLists.txt  wdt1.c
3 - Timers/Blink_COM_Timer/: Anexo_2_Blink_COM_Timer.docx
3 - Timers/Blink_SEM_Timer/: Anexo_1_Blink_SEM_Timer.docx  Blink_SEM_Timer.c
Configuração-texto-oled-LCD/: README.md
(+167 files in other folders)
